[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/OverlayMode.gd" type="Script" id=1]
[ext_resource path="res://UI/Icons/Overlay_Close_Normal4.png" type="Texture" id=2]
[ext_resource path="res://UI/Icons/Overlay_Close_Pressed4.png" type="Texture" id=3]
[ext_resource path="res://UI/Icons/Overlay_Close_Hover4.png" type="Texture" id=4]
[ext_resource path="res://Scripts/OverlayClose.gd" type="Script" id=5]
[ext_resource path="res://UI/Icons/Overlay_Hide_Normal.png" type="Texture" id=6]
[ext_resource path="res://UI/Icons/Overlay_Show_Normal.png" type="Texture" id=7]
[ext_resource path="res://UI/Icons/Overlay_Hide_Hover.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Minimize.gd" type="Script" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="OverlayMode" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.602
margin_left = -307.0
margin_top = -97.0
margin_right = 308.0
margin_bottom = 94.84
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 305.0
margin_right = 320.0
margin_bottom = 15.0
rect_rotation = 45.0
mouse_default_cursor_shape = 13

[node name="Header" type="HBoxContainer" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 575.0
margin_bottom = 50.0
custom_constants/separation = 16

[node name="VSeparator" type="VSeparator" parent="Header"]
margin_right = 13.06
margin_bottom = 15.0
rect_min_size = Vector2( 13.06, 0 )
custom_styles/separator = SubResource( 1 )

[node name="Time" type="Label" parent="Header"]
margin_left = 29.0
margin_right = 64.0
margin_bottom = 14.0
rect_min_size = Vector2( 35, 0 )
text = "Time"
align = 1

[node name="Name" type="Label" parent="Header"]
margin_left = 80.0
margin_right = 181.0
margin_bottom = 14.0
rect_min_size = Vector2( 101, 0 )
text = "Name"
align = 1

[node name="Rating" type="Label" parent="Header"]
margin_left = 197.0
margin_right = 247.28
margin_bottom = 14.0
rect_min_size = Vector2( 50.28, 0 )
text = "Rating"
align = 1

[node name="Slot" type="Label" parent="Header"]
margin_left = 263.0
margin_right = 287.0
margin_bottom = 14.0
text = "Slot"
align = 1

[node name="Location" type="Label" parent="Header"]
margin_left = 303.0
margin_right = 379.4
margin_bottom = 14.0
rect_min_size = Vector2( 76.4, 0 )
text = "Location"
align = 1

[node name="Scrips" type="Label" parent="Header"]
margin_left = 395.0
margin_right = 433.0
margin_bottom = 14.0
text = "Scrips"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 35.0
margin_top = 58.0
margin_right = 575.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_group_": true
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 27.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 25.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
script = ExtResource( 5 )

[node name="Minimize" type="TextureButton" parent="."]
margin_left = 57.5
margin_top = 5.0
margin_right = 77.5
margin_bottom = 25.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="pressed" from="Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
